Ürün_Entity_Güncelleme

--- a/dotnet-store/Views/Home/Index.cshtml
+++ b/dotnet-store/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
             @foreach (var urun in Model)
             {
                 <div class="col-3">
-                    @await Html.PartialAsync("Partials/_UrunCard", urun) <!-- Burada virgülden sonra yazdığım urun bölümü _UrunCard'a gönderilen bilgidir. -->
+                    @await Html.PartialAsync("Partials/_UrunCard", urun) 
                 </div>
             }
         </div>
