--- a/dotnet-store/Views/Shared/Components/Navbar/Default.cshtml
+++ b/dotnet-store/Views/Shared/Components/Navbar/Default.cshtml
@@ -13,7 +13,7 @@
 
                 @foreach(var item in Model) {
                     <li class="nav-item">
-                        <a href="#" class="nav-link ps-0">@item.KategoriAdi</a>
+                        <a href="/urunler/@kategori.Url" class="nav-link ps-0">@item.KategoriAdi</a>
                     </li>
                 }
             </ul>
