--- a/dotnet-store/Views/Urun/List.cshtml
+++ b/dotnet-store/Views/Urun/List.cshtml
@@ -4,6 +4,10 @@
     <div class="container">
         <h3 class="h4 mb-1 mb-lg-3">Ürün Listesi</h3>
 
+        @if(Model.Count == 0) { // Burada Model.Count ifadesindeki Count listelenen değerleri belirtir burada sıfır yazdık yani liste içi 0 sa Ürün Bulunamadı Diyicek.
+            <div class="alert alert-danger">Ürün Bulunumadı</div>
+        }
+
         <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-2">
             @foreach (var urun in Model)
             {
