--- a/dotnet-store/Views/Shared/Partials/_Details.cshtml
+++ b/dotnet-store/Views/Shared/Partials/_Details.cshtml
@@ -7,7 +7,7 @@
                 <div class="gallery-wrap">
                     <div class="img-big-wrap img-thumbnail">
                         <a href="img/1-big.jpeg" data-type="image" data-fslightbox>
-                            <img src="~/img/@Model.Resim" alt="">
+                            <img src="~/img/@Model.Resim" height="380" alt="">
                         </a>
                     </div>
                     <div class="thumbs-wrap">
@@ -66,4 +66,10 @@
             </div>
         </div>
     </div>
+</section>
+
+<section class="mt-3">
+        <div class="container">
+            @await Html.PartialAsync("_SmilarDetails")
+        </div>
 </section>
