Smilar-Product-List-Finish

--- a/dotnet-store/Views/Shared/Partials/_UrunCard.cshtml
+++ b/dotnet-store/Views/Shared/Partials/_UrunCard.cshtml
@@ -7,10 +7,10 @@
     </div>
 
     <div class="border-top info-wrap">
-        <a asp-controller="Urun" asp-action="Details" asp-route-id="@Model.Id" class="float-end btn btn-light">
+        <a asp-controller="Urunler" asp-action="Details" asp-route-id="@Model.Id" class="float-end btn btn-light">
             <i class="fa-regular fa-heart"></i>
         </a>
-        <a asp-controller="Details" asp-action="Index" asp-route-id="@Model.Id" class="title text-truncate">@Model.UrunAdi</a>
+        <a asp-controller="Urunler" asp-action="Details" asp-route-id="@Model.Id" class="title text-truncate">@Model.UrunAdi</a>
         <div class="price-wrap">
             <span class="price-discount">@Model.Fiyat</span>
             @* <del class="price">49.999 ₺</del> *@
