Yönetim_Paneli_Şablonu

--- a/dotnet-store/Views/Urunler/List.cshtml
+++ b/dotnet-store/Views/Urunler/List.cshtml
@@ -12,7 +12,7 @@
             @foreach (var urun in Model)
             {
                 <div class="col-3">
-                    @await Html.PartialAsync("Partials/_UrunCard", urun)
+                    @await Html.PartialAsync("Partials/Site/_UrunCard", urun)
                 </div>
             }
         </div>
