--- a/dotnet-store/Views/Home/Index.cshtml
+++ b/dotnet-store/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
                 </div>
                 <div class="col-lg-9">
                     <!-- slider -->
-                    @await Html.PartialAsync("Partials/_Slider", ViewData["Slider"])
+                    @await Html.PartialAsync("Partials/Site/_Slider", ViewData["Slider"])
                 </div>
             </div>
         </div>
