--- a/dotnet-store/Views/Kategori/Index.cshtml
+++ b/dotnet-store/Views/Kategori/Index.cshtml
@@ -1,4 +1,4 @@
-@model List<Kategori>
+@model List<KategoriGetModel>
 
 @{
     Layout = "_AdminLayout";
@@ -9,7 +9,7 @@
         <div class="card shadow">
             <div class="card-header py-1 d-flex justify-content-between align-items-center">
                 <h5 class="card-title">Kategoriler</h5>
-                <a href="kategori-ekle.html" class="btn btn-sm btn-primary">
+                <a asp-controller="Kategori" asp-action="Create" class="btn btn-sm btn-primary">
                     <i class="fa-solid fa-plus"></i>
                 </a>
             </div>
@@ -32,7 +32,7 @@
                                     <td>@kat.Id</td>
                                     <td>@kat.KategoriAdi</td>
                                     <td>@kat.url</td>
-                                    <td>@kat.Uruns.Count</td>
+                                    <td>@kat.UrunSayisi</td>
                                     <td>
                                         <a href="kategori-ekle.html" class="btn btn-primary btn-sm">
                                             <i class="fa-solid fa-pen-to-square"></i>
