Kategori-Ekleme-Formu

--- a/dotnet-store/Views/Kategori/Index.cshtml
+++ b/dotnet-store/Views/Kategori/Index.cshtml
@@ -1,5 +1,7 @@
 @model List<KategoriGetModel>
 
+<!-- Burada kullanması gereken ana html yapısı Admin olduğu için buranın Layout değerini biz değiştirdik.  -->
+
 @{
     Layout = "_AdminLayout";
 }
